# ShaSea

./: CMakeLists.txt  ObfuscationPlugin.cpp  README.md
Obfuscation/: BogusControlFlow.cpp  BogusControlFlow.h  CryptoUtils.cpp  Flattening.cpp  Flattening.h  IPObfuscationContext.cpp  IndirectBranch.cpp  IndirectBranch.h  IndirectCall.cpp  IndirectCall.h  LegacyLowerSwitch.cpp  LegacyLowerSwitch.h  ObfuscationPass.h  SplitBasicBlock.cpp  SplitBasicBlock.h  StringEncryption.cpp  StringEncryption.h  Substitution.cpp  Substitution.h  Utils.cpp  VMFlatten.cpp  VMFlatten.h
test/: test.c  test.ll  test.obf.ll  test_obf.ll
